--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
