--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,11 @@
       "ES5",
       "ES6",
       "ES7"
-    ]
+    ],
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "types/**/*.d.ts"
   ]
 }
